--- a/customer.html
+++ b/customer.html
@@ -69,10 +69,10 @@
         <div class="inside-header">
             <div class="inside-header-content sectionMargin">
                 <div class="inside-header-top flsb">
-                    <div class="inside-header-title">Customer service</div>
-                    <div class="inside-header-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    <h1 class="inside-header-title">Customer service</h1>
+                    <p class="inside-header-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
                 <div class="inside-header-bottom"
                     style="background: url('https://img.freepik.com/free-photo/smiling-businesswoman-relaxing-with-music-headphone-while-using-computer-office_637285-1172.jpg?w=1060&t=st=1711884052~exp=1711884652~hmac=13e2edeeaa9c3e6af1bc8f80569be726f871b2ce64d2ae434056898bc3e90054');">
@@ -88,17 +88,17 @@
                     <img src="./assets/customer-service.png" alt="development">
                     <p>Customer service</p>
                 </div>
-                <div class="price-title">Customer service</div>
-                <div class="price-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. </div>
+                <h1 class="price-title">Customer service</h1>
+                <p class="price-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. </p>
 
                 <div class="price-box-group">
                     <div class="price-box">
-                        <div class="price-category">Basic</div>
-                        <div class="price-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit </div>
-                        <div class="price-value">$150</div>
+                        <p class="price-category">Basic</p>
+                        <p class="price-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit </p>
+                        <p class="price-value">$150</p>
                         <div class="price-btn"><button>Get the free consultation</button></div>
-                        <div class="price-get">Everything you get with Basic:</div>
+                        <p class="price-get">Everything you get with Basic:</p>
                         <div class="price-get-value">
                             <ul>
                                 <li><svg width="28" height="15" viewBox="0 0 28 15" fill="none"
@@ -149,11 +149,11 @@
                         </div>
                     </div>
                     <div class="price-box">
-                        <div class="price-category">Plus</div>
-                        <div class="price-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit </div>
-                        <div class="price-value">$350</div>
+                        <p class="price-category">Plus</p>
+                        <p class="price-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit </p>
+                        <p class="price-value">$350</p>
                         <div class="price-btn"><button>Get the free consultation</button></div>
-                        <div class="price-get">Everything you get with Basic:</div>
+                        <p class="price-get">Everything you get with Basic:</p>
                         <div class="price-get-value">
                             <ul>
                                 <li><svg width="28" height="15" viewBox="0 0 28 15" fill="none"
@@ -204,11 +204,11 @@
                         </div>
                     </div>
                     <div class="price-box">
-                        <div class="price-category">Business</div>
-                        <div class="price-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit </div>
-                        <div class="price-value">$500</div>
+                        <p class="price-category">Business</p>
+                        <p class="price-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit </p>
+                        <p class="price-value">$500</p>
                         <div class="price-btn"><button>Get the free consultation</button></div>
-                        <div class="price-get">Everything you get with Basic:</div>
+                        <p class="price-get">Everything you get with Basic:</p>
                         <div class="price-get-value">
                             <ul>
                                 <li><svg width="28" height="15" viewBox="0 0 28 15" fill="none"
@@ -271,11 +271,11 @@
                     <img src="./assets/service.png" alt="growth">
                     <p>Contact Us</p>
                 </div>
-                <div class="contact-title" style="color: #1e1e1e;">Contact Us</div>
-                <div class="contact-text" style="color: #1e1e1e;">Lorem ipsum dolor sit amet, consectetur adipiscing
+                <h1 class="contact-title" style="color: #1e1e1e;">Contact Us</h1>
+                <p class="contact-text" style="color: #1e1e1e;">Lorem ipsum dolor sit amet, consectetur adipiscing
                     elit, sed do eiusmod tempor
                     incididunt ut labore et dolore magna aliqua.
-                </div>
+                </p>
                 <div class="contact-info flsb">
                     <div class="contact-info-box-group">
                         <div class="contact-info-box">
@@ -284,11 +284,11 @@
                                     <img src="./assets/location.svg" alt="location">
                                 </div>
                                 <div class="contact-info-item-r">
-                                    <div class="contact-info-item-title" style="color: #1e1e1e;">Our address</div>
-                                    <div class="contact-info-item-value" style="color: #1e1e1e;">Lorem ipsum dolor sit
+                                    <p class="contact-info-item-title" style="color: #1e1e1e;">Our address</p>
+                                    <p class="contact-info-item-value" style="color: #1e1e1e;">Lorem ipsum dolor sit
                                         amet, consectetur
                                         adipiscing
-                                        elit,</div>
+                                        elit,</p>
                                 </div>
                             </div>
                         </div>
