--- a/index.html
+++ b/index.html
@@ -72,29 +72,24 @@
                         <img src="./assets/growth.png" alt="growth">
                         <p>Lorem ipsum dolor sit amet</p>
                     </div>
-                    <div class="header-title">WeConsult & Your partner in business development</div>
-                    <div class="header-subtitle">
-                        Lorem ipsum dolor sit amet, consectetur ipiscing elit, sed do eiusmod
-                        tempor
-                    </div>
+                    <h1 class="header-title">WeConsult & Your partner in business development</h1>
+                    <h2 class="header-subtitle">
+                        Lorem ipsum dolor sit amet, consectetur ipiscing elit, sed do eiusmod tempor
+                    </h2>
                     <div class="header-btnGroup flst">
-
                         <a href="#services" class="header-btn">
                             <div class="header-service-btn flss">
                                 <p>View all services</p>
                                 <i class="fa-solid fa-arrow-up"></i>
                             </div>
                         </a>
-
-
                         <a href="#about" class="header-btn">
                             <div class="header-more-btn flss">
-                                <p>Reed more</p><i class="fa-solid fa-arrow-up"></i>
+                                <p>Read more</p><i class="fa-solid fa-arrow-up"></i>
                             </div>
                         </a>
-
                     </div>
-                    <div class="header-subtitle">Trusted by more than 120+ companies worldwide</div>
+                    <p class="header-subtitle">Trusted by more than 120+ companies worldwide</p>
                 </div>
                 <div class="header-r">
                     <svg width="502" height="631" viewBox="0 0 502 631" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -124,17 +119,16 @@
                     <img src="./assets/service.png" alt="growth">
                     <p>Lorem ipsum dolor sit amet</p>
                 </div>
-                <div class="service-title">Check out our services</div>
+                <h2 class="service-title">Check out our services</h2>
                 <div class="service-group">
-
                     <div class="service-box">
                         <div class="service-box-l">
                             <div class="service-box-circle flss"><img src="./assets/app-development.png" alt=""></div>
                         </div>
                         <div class="service-box-r">
-                            <div class="service-box-title">Web and app development</div>
-                            <div class="service-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                                do eiusmod tempor incididunt ut labore et dolore magna aliqua. </div>
+                            <h3 class="service-box-title">Web and app development</h3>
+                            <p class="service-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                             <div class="service-box-link">
                                 <a href="./web.html" class="flst">
                                     <p>Learn More</p><i class="fa-solid fa-arrow-up"></i>
@@ -142,15 +136,14 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="service-box">
                         <div class="service-box-l">
                             <div class="service-box-circle flss"><img src="./assets/content-strategy.png" alt=""></div>
                         </div>
                         <div class="service-box-r">
-                            <div class="service-box-title">Digital marketing</div>
-                            <div class="service-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                                do eiusmod tempor incididunt ut labore et dolore magna aliqua. </div>
+                            <h3 class="service-box-title">Digital marketing</h3>
+                            <p class="service-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                             <div class="service-box-link">
                                 <a href="./digMark.html" class="flst">
                                     <p>Learn More</p><i class="fa-solid fa-arrow-up"></i>
@@ -158,15 +151,14 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="service-box">
                         <div class="service-box-l">
                             <div class="service-box-circle flss"><img src="./assets/delivery-boy.png" alt=""></div>
                         </div>
                         <div class="service-box-r">
-                            <div class="service-box-title">Delivery services</div>
-                            <div class="service-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                                do eiusmod tempor incididunt ut labore et dolore magna aliqua. </div>
+                            <h3 class="service-box-title">Delivery services</h3>
+                            <p class="service-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                             <div class="service-box-link">
                                 <a href="./delivery.html" class="flst">
                                     <p>Learn More</p><i class="fa-solid fa-arrow-up"></i>
@@ -174,15 +166,14 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="service-box">
                         <div class="service-box-l">
                             <div class="service-box-circle flss"><img src="./assets/service.png" alt=""></div>
                         </div>
                         <div class="service-box-r">
-                            <div class="service-box-title">Customer service</div>
-                            <div class="service-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                                do eiusmod tempor incididunt ut labore et dolore magna aliqua. </div>
+                            <h3 class="service-box-title">Customer service</h3>
+                            <p class="service-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                             <div class="service-box-link">
                                 <a href="./customer.html" class="flst">
                                     <p>Learn More</p><i class="fa-solid fa-arrow-up"></i>
@@ -206,16 +197,16 @@
                         <img src="./assets/service.png" alt="growth">
                         <p>Lorem ipsum dolor sit amet</p>
                     </div>
-                    <div class="about-title">Learn about WeConsult: Our team, our experience, our mission</div>
-                    <div class="about-text">
+                    <h2 class="about-title">Learn about WeConsult: Our team, our experience, our mission</h2>
+                    <p class="about-text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    </div>
-                    <div class="about-text">
+                    </p>
+                    <p class="about-text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                         tempor incididunt ut labore et dolore magna aliqua.
-                    </div>
+                    </p>
                 </div>
             </div>
         </div>
@@ -228,10 +219,10 @@
                     <img src="./assets/service.png" alt="growth">
                     <p>Contact Us</p>
                 </div>
-                <div class="contact-title">Contact Us</div>
-                <div class="contact-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                <h2 class="contact-title">Contact Us</h2>
+                <p class="contact-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore et dolore magna aliqua.
-                </div>
+                </p>
                 <div class="contact-info flsb">
                     <div class="contact-info-box-group">
                         <div class="contact-info-box">
@@ -240,37 +231,41 @@
                                     <img src="./assets/location.svg" alt="location">
                                 </div>
                                 <div class="contact-info-item-r">
-                                    <div class="contact-info-item-title">Our address</div>
-                                    <div class="contact-info-item-value">Lorem ipsum dolor sit amet, consectetur
-                                        adipiscing
-                                        elit,</div>
+                                    <h3 class="contact-info-item-title">Our address</h3>
+                                    <p class="contact-info-item-value">Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit,
+                                    </p>
                                 </div>
                             </div>
                         </div>
                         <div class="contact-info-box">
                             <div class="contact-info-item">
                                 <div class="contact-info-item-circle flss">
-                                    <img src="./assets/support.svg" alt="location">
+                                    <img src="./assets/support.svg" alt="support">
                                 </div>
                                 <div class="contact-info-item-r">
-                                    <div class="contact-info-item-title">Contact information</div>
-                                    <div class="contact-info-item-value">Mobile : <a href="">+900 00 000 77 00</a></div>
-                                    <div class="contact-info-item-value">Mail : <a href="">info@example.com</a></div>
-                                    <div class="contact-info-item-value">Instagram : <a href="">@example.name</a></div>
+                                    <h3 class="contact-info-item-title">Contact information</h3>
+                                    <p class="contact-info-item-value">Mobile: <a href="tel:+900000007700">+900 00 000
+                                            77 00</a></p>
+                                    <p class="contact-info-item-value">Mail: <a
+                                            href="mailto:info@example.com">info@example.com</a></p>
+                                    <p class="contact-info-item-value">Instagram: <a
+                                            href="https://instagram.com/example.name">@example.name</a></p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="contact-info-img">
-                        <img src="./assets/contact.svg" alt="">
+                        <img src="./assets/contact.svg" alt="contact">
                     </div>
                 </div>
                 <div class="map">
-
+                    <!-- Map content goes here -->
                 </div>
             </div>
         </div>
     </section>
+
 
     <footer>
         <div class="footer">
