--- a/delivery.html
+++ b/delivery.html
@@ -69,10 +69,10 @@
         <div class="inside-header">
             <div class="inside-header-content sectionMargin">
                 <div class="inside-header-top flsb">
-                    <div class="inside-header-title">Delivery services</div>
-                    <div class="inside-header-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    <h1 class="inside-header-title">Delivery services</h1>
+                    <p class="inside-header-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
                 <div class="inside-header-bottom"
                     style="background: url('https://img.freepik.com/free-photo/delivery-man-yellow-jacket-opening-yellow-backpack-taking-bag-with-order_1268-16751.jpg?w=1060&t=st=1711884093~exp=1711884693~hmac=10d5256361117ade6aae44b29c6e9738c6cb720ea1ca05afecd393dde2229fda');">
@@ -94,11 +94,11 @@
 
                 <div class="price-box-group">
                     <div class="price-box">
-                        <div class="price-category">Basic</div>
-                        <div class="price-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit </div>
-                        <div class="price-value">$150</div>
+                        <p class="price-category">Basic</p>
+                        <p class="price-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit </p>
+                        <p class="price-value">$150</p>
                         <div class="price-btn"><button>Get the free consultation</button></div>
-                        <div class="price-get">Everything you get with Basic:</div>
+                        <p class="price-get">Everything you get with Basic:</p>
                         <div class="price-get-value">
                             <ul>
                                 <li><svg width="28" height="15" viewBox="0 0 28 15" fill="none"
@@ -149,11 +149,11 @@
                         </div>
                     </div>
                     <div class="price-box">
-                        <div class="price-category">Plus</div>
-                        <div class="price-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit </div>
-                        <div class="price-value">$350</div>
+                        <p class="price-category">Plus</p>
+                        <p class="price-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit </p>
+                        <p class="price-value">$350</p>
                         <div class="price-btn"><button>Get the free consultation</button></div>
-                        <div class="price-get">Everything you get with Basic:</div>
+                        <p class="price-get">Everything you get with Basic:</p>
                         <div class="price-get-value">
                             <ul>
                                 <li><svg width="28" height="15" viewBox="0 0 28 15" fill="none"
@@ -204,11 +204,11 @@
                         </div>
                     </div>
                     <div class="price-box">
-                        <div class="price-category">Business</div>
-                        <div class="price-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit </div>
-                        <div class="price-value">$500</div>
+                        <p class="price-category">Business</p>
+                        <p class="price-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit </p>
+                        <p class="price-value">$500</p>
                         <div class="price-btn"><button>Get the free consultation</button></div>
-                        <div class="price-get">Everything you get with Basic:</div>
+                        <p class="price-get">Everything you get with Basic:</p>
                         <div class="price-get-value">
                             <ul>
                                 <li><svg width="28" height="15" viewBox="0 0 28 15" fill="none"
@@ -271,11 +271,11 @@
                     <img src="./assets/service.png" alt="growth">
                     <p>Contact Us</p>
                 </div>
-                <div class="contact-title" style="color: #1e1e1e;">Contact Us</div>
-                <div class="contact-text" style="color: #1e1e1e;">Lorem ipsum dolor sit amet, consectetur adipiscing
+                <h1 class="contact-title" style="color: #1e1e1e;">Contact Us</h1>
+                <p class="contact-text" style="color: #1e1e1e;">Lorem ipsum dolor sit amet, consectetur adipiscing
                     elit, sed do eiusmod tempor
                     incididunt ut labore et dolore magna aliqua.
-                </div>
+                </p>
                 <div class="contact-info flsb">
                     <div class="contact-info-box-group">
                         <div class="contact-info-box">
@@ -284,11 +284,11 @@
                                     <img src="./assets/location.svg" alt="location">
                                 </div>
                                 <div class="contact-info-item-r">
-                                    <div class="contact-info-item-title" style="color: #1e1e1e;">Our address</div>
-                                    <div class="contact-info-item-value" style="color: #1e1e1e;">Lorem ipsum dolor sit
+                                    <h1 class="contact-info-item-title" style="color: #1e1e1e;">Our address</h1>
+                                    <p class="contact-info-item-value" style="color: #1e1e1e;">Lorem ipsum dolor sit
                                         amet, consectetur
                                         adipiscing
-                                        elit,</div>
+                                        elit,</p>
                                 </div>
                             </div>
                         </div>
